--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node src/server.ts",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'",
-    "test": "db-migrate --env test up && jasmine-ts && db-migrate db:drop test down",
+    "test": "cross-env NODE_ENV=test && db-migrate --env test up && jasmine-ts && db-migrate db:drop test down",
     "tsc": "tsc"
   },
   "author": "Udacity",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/jasmine": "^3.6.3",
+    "cross-env": "^7.0.3",
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
     "jasmine-ts": "^0.3.0",
